--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ font-family: 'Dosis', sans-serif;
 
 .genres-container {
   margin-block-start: 20px;
+  margin-inline: 100px;
   display:flex;
   flex-wrap: wrap;
   align-content: flex-start;
@@ -173,6 +174,10 @@ font-family: 'Dosis', sans-serif;
   border-radius: 10px;
   text-align: center;
   cursor: pointer;
+}
+.genre-name:hover{
+  background-color: rgb(158, 28, 158);
+  transform:scale(1.05);
 }
 
 
